# DJRA

./: CMakeLists.txt  Makefile  README.md  b_render.cpp  b_render.hpp  background_render.cpp  background_render.hpp  collision.cpp  collision.hpp  djra  exit.cpp  exit.hpp  ignorar  main.cpp  oldMain.cpp  render.cpp  render.hpp  spheres.cpp  spheres.hpp  transition.cpp  transition.hpp  tutorial.cpp  tutorial.hpp
output/: CMakeCache.txt  Makefile  cmake_install.cmake
resultados/: Resultados.txt
